// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Kana Input E2E Tests > カナからAudioQuery > アクセント記号付きカナからAudioQueryを生成できること 1`] = `
{
  "accent_phrases": [
    {
      "accent": 4,
      "is_interrogative": false,
      "moras": [
        {
          "consonant": "d",
          "consonant_length": 0.056533225,
          "pitch": 5.7121177,
          "text": "ディ",
          "vowel": "i",
          "vowel_length": 0.08009541,
        },
        {
          "consonant": null,
          "consonant_length": null,
          "pitch": 5.870575,
          "text": "イ",
          "vowel": "i",
          "vowel_length": 0.09484407,
        },
        {
          "consonant": "p",
          "consonant_length": 0.06810771,
          "pitch": 5.9751472,
          "text": "プ",
          "vowel": "u",
          "vowel_length": 0.06061983,
        },
        {
          "consonant": "r",
          "consonant_length": 0.030861272,
          "pitch": 5.98361,
          "text": "ラ",
          "vowel": "a",
          "vowel_length": 0.08569647,
        },
        {
          "consonant": null,
          "consonant_length": null,
          "pitch": 5.971664,
          "text": "ア",
          "vowel": "a",
          "vowel_length": 0.08874887,
        },
        {
          "consonant": "n",
          "consonant_length": 0.071978636,
          "pitch": 5.820726,
          "text": "ニ",
          "vowel": "i",
          "vowel_length": 0.09665903,
        },
        {
          "consonant": null,
          "consonant_length": null,
          "pitch": 5.6745367,
          "text": "ン",
          "vowel": "N",
          "vowel_length": 0.07094575,
        },
        {
          "consonant": "g",
          "consonant_length": 0.045007236,
          "pitch": 5.5559015,
          "text": "グ",
          "vowel": "u",
          "vowel_length": 0.061559036,
        },
        {
          "consonant": "w",
          "consonant_length": 0.05375315,
          "pitch": 5.4415455,
          "text": "ワ",
          "vowel": "a",
          "vowel_length": 0.08784131,
        },
      ],
      "pause_mora": null,
    },
    {
      "accent": 3,
      "is_interrogative": false,
      "moras": [
        {
          "consonant": "b",
          "consonant_length": 0.06447547,
          "pitch": 5.541338,
          "text": "バ",
          "vowel": "a",
          "vowel_length": 0.1227225,
        },
        {
          "consonant": null,
          "consonant_length": null,
          "pitch": 5.8458114,
          "text": "ン",
          "vowel": "N",
          "vowel_length": 0.06271103,
        },
        {
          "consonant": "n",
          "consonant_length": 0.039514754,
          "pitch": 5.968163,
          "text": "ノ",
          "vowel": "o",
          "vowel_length": 0.07672596,
        },
        {
          "consonant": null,
          "consonant_length": null,
          "pitch": 5.964781,
          "text": "オ",
          "vowel": "o",
          "vowel_length": 0.07972179,
        },
        {
          "consonant": "y",
          "consonant_length": 0.049972612,
          "pitch": 5.8539615,
          "text": "ヤ",
          "vowel": "a",
          "vowel_length": 0.08291925,
        },
        {
          "consonant": "k",
          "consonant_length": 0.048752483,
          "pitch": 5.708745,
          "text": "ク",
          "vowel": "u",
          "vowel_length": 0.03959964,
        },
        {
          "consonant": "d",
          "consonant_length": 0.04749633,
          "pitch": 5.5406666,
          "text": "デ",
          "vowel": "e",
          "vowel_length": 0.07619269,
        },
        {
          "consonant": "w",
          "consonant_length": 0.051806457,
          "pitch": 5.358024,
          "text": "ワ",
          "vowel": "a",
          "vowel_length": 0.09570435,
        },
      ],
      "pause_mora": null,
    },
    {
      "accent": 4,
      "is_interrogative": false,
      "moras": [
        {
          "consonant": null,
          "consonant_length": null,
          "pitch": 5.297085,
          "text": "ア",
          "vowel": "a",
          "vowel_length": 0.10000364,
        },
        {
          "consonant": "r",
          "consonant_length": 0.036975175,
          "pitch": 5.5522943,
          "text": "リ",
          "vowel": "i",
          "vowel_length": 0.059967957,
        },
        {
          "consonant": "m",
          "consonant_length": 0.049912594,
          "pitch": 5.808062,
          "text": "マ",
          "vowel": "a",
          "vowel_length": 0.08298458,
        },
        {
          "consonant": "s",
          "consonant_length": 0.08744423,
          "pitch": 5.931568,
          "text": "セ",
          "vowel": "e",
          "vowel_length": 0.10285894,
        },
        {
          "consonant": null,
          "consonant_length": null,
          "pitch": 5.7640185,
          "text": "ン",
          "vowel": "N",
          "vowel_length": 0.054364007,
        },
      ],
      "pause_mora": null,
    },
  ],
  "intonationScale": 1,
  "kana": "ディイプラ'アニングワ/バンノ'オヤクデワ/アリマセ'ン",
  "outputSamplingRate": 24000,
  "outputStereo": false,
  "pitchScale": 0,
  "postPhonemeLength": 0.1,
  "prePhonemeLength": 0.1,
  "speedScale": 1,
  "volumeScale": 1,
}
`;

exports[`Kana Input E2E Tests > カナからアクセント句 > アクセント記号付きカナからアクセント句を生成できること 1`] = `
[
  {
    "accent": 4,
    "is_interrogative": false,
    "moras": [
      {
        "consonant": "d",
        "consonant_length": 0.056533225,
        "pitch": 5.7121177,
        "text": "ディ",
        "vowel": "i",
        "vowel_length": 0.08009541,
      },
      {
        "consonant": null,
        "consonant_length": null,
        "pitch": 5.870575,
        "text": "イ",
        "vowel": "i",
        "vowel_length": 0.09484407,
      },
      {
        "consonant": "p",
        "consonant_length": 0.06810771,
        "pitch": 5.9751472,
        "text": "プ",
        "vowel": "u",
        "vowel_length": 0.06061983,
      },
      {
        "consonant": "r",
        "consonant_length": 0.030861272,
        "pitch": 5.98361,
        "text": "ラ",
        "vowel": "a",
        "vowel_length": 0.08569647,
      },
      {
        "consonant": null,
        "consonant_length": null,
        "pitch": 5.971664,
        "text": "ア",
        "vowel": "a",
        "vowel_length": 0.08874887,
      },
      {
        "consonant": "n",
        "consonant_length": 0.071978636,
        "pitch": 5.820726,
        "text": "ニ",
        "vowel": "i",
        "vowel_length": 0.09665903,
      },
      {
        "consonant": null,
        "consonant_length": null,
        "pitch": 5.6745367,
        "text": "ン",
        "vowel": "N",
        "vowel_length": 0.07094575,
      },
      {
        "consonant": "g",
        "consonant_length": 0.045007236,
        "pitch": 5.5559015,
        "text": "グ",
        "vowel": "u",
        "vowel_length": 0.061559036,
      },
      {
        "consonant": "w",
        "consonant_length": 0.05375315,
        "pitch": 5.4415455,
        "text": "ワ",
        "vowel": "a",
        "vowel_length": 0.08784131,
      },
    ],
    "pause_mora": null,
  },
  {
    "accent": 3,
    "is_interrogative": false,
    "moras": [
      {
        "consonant": "b",
        "consonant_length": 0.06447547,
        "pitch": 5.541338,
        "text": "バ",
        "vowel": "a",
        "vowel_length": 0.1227225,
      },
      {
        "consonant": null,
        "consonant_length": null,
        "pitch": 5.8458114,
        "text": "ン",
        "vowel": "N",
        "vowel_length": 0.06271103,
      },
      {
        "consonant": "n",
        "consonant_length": 0.039514754,
        "pitch": 5.968163,
        "text": "ノ",
        "vowel": "o",
        "vowel_length": 0.07672596,
      },
      {
        "consonant": null,
        "consonant_length": null,
        "pitch": 5.964781,
        "text": "オ",
        "vowel": "o",
        "vowel_length": 0.07972179,
      },
      {
        "consonant": "y",
        "consonant_length": 0.049972612,
        "pitch": 5.8539615,
        "text": "ヤ",
        "vowel": "a",
        "vowel_length": 0.08291925,
      },
      {
        "consonant": "k",
        "consonant_length": 0.048752483,
        "pitch": 5.708745,
        "text": "ク",
        "vowel": "u",
        "vowel_length": 0.03959964,
      },
      {
        "consonant": "d",
        "consonant_length": 0.04749633,
        "pitch": 5.5406666,
        "text": "デ",
        "vowel": "e",
        "vowel_length": 0.07619269,
      },
      {
        "consonant": "w",
        "consonant_length": 0.051806457,
        "pitch": 5.358024,
        "text": "ワ",
        "vowel": "a",
        "vowel_length": 0.09570435,
      },
    ],
    "pause_mora": null,
  },
  {
    "accent": 4,
    "is_interrogative": false,
    "moras": [
      {
        "consonant": null,
        "consonant_length": null,
        "pitch": 5.297085,
        "text": "ア",
        "vowel": "a",
        "vowel_length": 0.10000364,
      },
      {
        "consonant": "r",
        "consonant_length": 0.036975175,
        "pitch": 5.5522943,
        "text": "リ",
        "vowel": "i",
        "vowel_length": 0.059967957,
      },
      {
        "consonant": "m",
        "consonant_length": 0.049912594,
        "pitch": 5.808062,
        "text": "マ",
        "vowel": "a",
        "vowel_length": 0.08298458,
      },
      {
        "consonant": "s",
        "consonant_length": 0.08744423,
        "pitch": 5.931568,
        "text": "セ",
        "vowel": "e",
        "vowel_length": 0.10285894,
      },
      {
        "consonant": null,
        "consonant_length": null,
        "pitch": 5.7640185,
        "text": "ン",
        "vowel": "N",
        "vowel_length": 0.054364007,
      },
    ],
    "pause_mora": null,
  },
]
`;
